--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta3",
     "firebase": "^7.0 || ^8.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
